# 4.1-4.4 个性化流程认证登陆,读取配置文件属性

--- a/admin-meng-demo/src/main/resources/static/login.html
+++ b/admin-meng-demo/src/main/resources/static/login.html
@@ -5,7 +5,7 @@
     <title>登录</title>
 </head>
 <body>
-    <h1>我的登录页面</h1>
+    <h1>标准登录页面</h1>
 
     <form action="/admin-meng/login" method="post">
         <table>
