--- a/admin-meng-demo/src/main/resources/static/error/index.html
+++ b/admin-meng-demo/src/main/resources/static/error/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>首页</title>
+    <title></title>
 </head>
 <body>
-    <h1>登录页11111111111111111111111111111</h1>
+    <h1>标准登录页</h1>
 
 </body>
 </html>
