# 4-5 完善 自定义用户认证流程

--- a/admin-meng-demo/src/main/resources/static/test-sucess.html
+++ b/admin-meng-demo/src/main/resources/static/test-sucess.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>测试页面</title>
+    <title>成功跳转吧 宝贝！</title>
 </head>
 <body>
-    <h1>测试跳转页面</h1>
+    <h1>快回来吧宝贝</h1>
 </body>
 </html>
