--- a/admin-meng-demo/src/main/resources/static/login.html
+++ b/admin-meng-demo/src/main/resources/static/login.html
@@ -23,7 +23,9 @@
                     <input type="text" name="imageCode">
                     <img src="/code/image?width=200">
                 </td>
-
+            </tr>
+            <tr>
+                <td colspan="2"><input name="remember-me" type="checkbox" value="true"/>记住我</td>
             </tr>
             <tr>
                 <td><button type="submit">登录</button></td>
