--- a/admin-meng-demo/src/main/resources/static/login.html
+++ b/admin-meng-demo/src/main/resources/static/login.html
@@ -32,5 +32,30 @@
             </tr>
         </table>
     </form>
+
+
+    <h1>短信登录页面</h1>
+
+    <form action="/admin-meng/login" method="post">
+        <table>
+            <tr>
+                <td>用户名:</td>
+                <td><input type="text" name="mobile" value="18248758106"></td>
+            </tr>
+            <tr>
+                <td>短信验证码</td>
+                <td>
+                    <input type="text" name="smsCode">
+                    <a href="/code/sms?mobile=18248758106">发送验证码</a>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2"><input name="remember-me" type="checkbox" value="true"/>记住我</td>
+            </tr>
+            <tr>
+                <td><button type="submit">登录</button></td>
+            </tr>
+        </table>
+    </form>
 </body>
 </html>
