# 4.11-4.12 短信验证码开发及配置

--- a/admin-meng-demo/src/main/resources/static/login.html
+++ b/admin-meng-demo/src/main/resources/static/login.html
@@ -36,7 +36,7 @@
 
     <h1>短信登录页面</h1>
 
-    <form action="/admin-meng/login" method="post">
+    <form action="/admin-meng/mobile" method="post">
         <table>
             <tr>
                 <td>用户名:</td>
