# 5-4 开发QQ登录(中)

--- a/admin-meng-demo/src/main/resources/static/login.html
+++ b/admin-meng-demo/src/main/resources/static/login.html
@@ -57,5 +57,10 @@
             </tr>
         </table>
     </form>
+    <br/>
+
+    <h1>社交登录</h1>
+    <a href="/auth/qq">QQ登录</a>
+
 </body>
 </html>
